<resources>
    <string name="app_name">Fundraiser</string>

    <string name="title_section_home">Home</string>
    <string name="title_section_current_fund">Current Fund</string>
    <string name="title_section_past_fund">Past Fund</string>
    <string name="title_section_top_donors">Top Donors</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="fund_current_fragment_title">Fund Raising id: 000</string>
    <string name="fund_current_fragment_description">12345678901234567890123456790123456789012345678901234567890</string>
    <string name="fund_current_fragment_progress">Progress:</string>
    <string name="fund_current_fragment_total">Total Payments:</string>
    <string name="fund_current_fragment_average">Average Donation:</string>
    <string name="fund_current_fragment_goal">Goal:</string>
    <string name="fund_current_fragment_post_days_ago">Posted:</string>
    <string name="fragment_fund_edit">Edit</string>

    <string name="fund_past_fragment_title">Fund Raising id: 000</string>

    <string name="fund_top_donors_fragment_title">Donor id: 000</string>

    <string name="fund_item_fragment_donate_button">Donate</string>
    <string name="fund_item_fragment_raised">raised</string>
    <string name="fund_item_fragment_donated">donated</string>
    <string name="fund_item_fragment_donors">donors</string>
    <string name="fund_item_fragment_long_description">123456789 123456789 12345679 123456789 123456789 123456789 123456789 123456789 12345679 123456789 123456789 123456789 123456789 123456789 12345679 123456789 123456789 123456789 123456789 123456789 12345679 123456789 123456789 123456789 123456789 123456789 12345679 123456789 123456789 123456789 123456789 123456789 12345679 123456789 123456789 123456789 </string>

    <string name="fund_payment_fragment_custom">$</string>
    <string name="fund_payment_fragment_pay_button">Pay with Card</string>

    <string name="fund_edit_fragment_title">Title</string>
    <string name="fund_edit_fragment_goal">Target sum: $</string>
    <string name="fund_edit_fragment_long_description">Long description</string>
    <string name="fund_edit_fragment_choose_pic_button">Choose picture</string>
    <string name="fund_edit_fragment_take_pic_button">Take picture</string>
    <string name="fund_edit_fragment_archive_button">Archive</string>
    <string name="fund_edit_fragment_save_button">Save</string>

    <string name="fund_paid_fragment_thankyou">Thank you for your donation</string>
    <string name="fund_paid_fragment_goback">Back to home</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
