<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.irislim.fundraiser.FundEditFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fund_current_fragment_title"
            android:padding="8dp"
            android:background="#ffcdcdcd"
            android:layout_gravity="center_horizontal|top"
            android:textSize="18dp"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_margin="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_margin="8dp"
            android:background="#ffcdcdcd"
            android:padding="8dp"
            android:hint="@string/fund_edit_fragment_title" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00cdcdcd"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fund_edit_fragment_goal"
                android:padding="8dp"
                android:layout_gravity="center_horizontal|top"
                android:textSize="18dp"
                android:textStyle="bold"
                android:id="@+id/textView3" />

            <EditText
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:padding="8dp"
                android:background="#ffcdcdcd"
                android:autoText="false"
                android:inputType="number" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:layout_margin="8dp"
            android:background="#ffcdcdcd"
            android:padding="8dp"
            android:layout_weight="1.1"
            android:gravity="top|left"
            android:hint="@string/fund_edit_fragment_long_description" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageView"
                android:background="#ffcdcdcd" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fund_edit_fragment_choose_pic_button"
                    android:id="@+id/button3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fund_edit_fragment_take_pic_button"
                    android:id="@+id/button4"
                    android:layout_gravity="top" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fund_edit_fragment_archive_button"
                android:id="@+id/fund_edit_archive_btn"
                android:background="@android:color/holo_red_light"
                android:layout_marginRight="32dp"
                android:onClick="fundEditArchiveButtonOnClick"
                android:nestedScrollingEnabled="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fund_edit_fragment_save_button"
                android:id="@+id/fund_edit_save_btn"
                android:background="@color/accent_material_light"
                android:layout_marginLeft="32dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
